<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_capa"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/nav_menu_secundary_group">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_goto_site"
                android:icon="@drawable/ic_open_in_browser_black_24dp"
                android:title="@string/menu_goto_site" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
